[gd_scene load_steps=49 format=3 uid="uid://bb6hv48hppt78"]

[ext_resource type="Script" path="res://scripts/gameplay-ui.gd" id="1_nibp3"]
[ext_resource type="Texture2D" uid="uid://bwlfd3aa8q3w6" path="res://ui_images/border_trim.png" id="2_ceahc"]
[ext_resource type="PackedScene" uid="uid://d15vh4rg57dp1" path="res://scenes/MusicPlayer.tscn" id="2_csqjr"]
[ext_resource type="PackedScene" uid="uid://ngu1bkvclntg" path="res://scenes/LaughterModule.tscn" id="2_i56to"]
[ext_resource type="Texture2D" uid="uid://bhiaf4y2m05aa" path="res://ui_images/table_with_module_open.png" id="3_cna1x"]
[ext_resource type="Texture2D" uid="uid://bwrt333tfcmlq" path="res://ui_images/blank_ui.png" id="4_0clmj"]
[ext_resource type="Script" path="res://scripts/itemListSelection.gd" id="4_434bg"]
[ext_resource type="FontFile" uid="uid://6m88uyjxpw1y" path="res://font/joystix monospace.otf" id="4_rly5q"]
[ext_resource type="Texture2D" uid="uid://bchs5t42givn3" path="res://ui_images/blank_white.png" id="5_btbry"]
[ext_resource type="Script" path="res://scripts/robot_interaction.gd" id="6_cubky"]
[ext_resource type="Script" path="res://scripts/CurrentModule.gd" id="7_3xkvv"]
[ext_resource type="Texture2D" uid="uid://b35qlg2fq8vro" path="res://art/Items/explosion/tile000.png" id="10_50v3m"]
[ext_resource type="Texture2D" uid="uid://bsc8totrvkc4s" path="res://art/Robots/JokerRobot.png" id="11_lrb24"]
[ext_resource type="Texture2D" uid="uid://d4mul34vah83" path="res://art/Items/explosion/tile001.png" id="11_yir0d"]
[ext_resource type="Texture2D" uid="uid://d4ex8ku4f4qdt" path="res://art/Items/explosion/tile002.png" id="12_eou8u"]
[ext_resource type="Texture2D" uid="uid://db3ihqk2ylxj3" path="res://art/Items/explosion/tile003.png" id="13_8dl21"]
[ext_resource type="Texture2D" uid="uid://bc8xqmwdf2opp" path="res://art/Items/explosion/tile004.png" id="14_tppg2"]
[ext_resource type="Texture2D" uid="uid://byesw0hm8nrnj" path="res://art/Items/explosion/tile005.png" id="15_ycl31"]
[ext_resource type="Texture2D" uid="uid://hu1wf0kjdmsg" path="res://art/Items/explosion/tile006.png" id="16_0igio"]
[ext_resource type="Texture2D" uid="uid://bbv1xg7vq0h70" path="res://art/Items/explosion/tile007.png" id="17_y0umi"]
[ext_resource type="Texture2D" uid="uid://n5i0x0oglslp" path="res://art/Items/explosion/tile008.png" id="18_ddwdk"]
[ext_resource type="Texture2D" uid="uid://b81afn7lpiss5" path="res://art/Items/explosion/tile009.png" id="19_nrech"]
[ext_resource type="Theme" uid="uid://cv5o7uq4xg1rr" path="res://themes/pixel_font_theme.tres" id="20_hybi0"]
[ext_resource type="AudioStream" uid="uid://uit2yn8bfbbl" path="res://sfx/Impact_2.wav" id="24_l2pxu"]

[sub_resource type="Theme" id="Theme_yees3"]
default_font = ExtResource("4_rly5q")

[sub_resource type="LabelSettings" id="LabelSettings_n36ei"]
font = ExtResource("4_rly5q")
font_size = 24

[sub_resource type="Theme" id="Theme_gc2j1"]
default_font = ExtResource("4_rly5q")
TooltipLabel/colors/font_color = Color(1, 1, 1, 1)
TooltipLabel/colors/font_outline_color = Color(0, 0, 0, 1)
TooltipLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
TooltipLabel/constants/outline_size = 0
TooltipLabel/constants/shadow_offset_x = 0
TooltipLabel/constants/shadow_offset_y = 0
TooltipLabel/font_sizes/font_size = 24
TooltipLabel/fonts/font = ExtResource("4_rly5q")

[sub_resource type="Theme" id="Theme_ufk8t"]
default_font = ExtResource("4_rly5q")

[sub_resource type="LabelSettings" id="LabelSettings_1vrp3"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_xvs7j"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_xqlj8"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_xx25p"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="Theme" id="Theme_6bjud"]
default_font = ExtResource("4_rly5q")

[sub_resource type="LabelSettings" id="LabelSettings_cbivg"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ceaa0"]
font_size = 22
font_color = Color(1, 1, 1, 0.266667)

[sub_resource type="LabelSettings" id="LabelSettings_8c5qn"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_vc8xy"]
font = ExtResource("4_rly5q")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pumu3"]
border_color = Color(0.764706, 0.823529, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw3th"]
bg_color = Color(0.905882, 0.254902, 0.290196, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hw4ma"]
size = Vector2(108.617, 93.6227)

[sub_resource type="SpriteFrames" id="SpriteFrames_b5n1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_50v3m")
}, {
"duration": 1.0,
"texture": ExtResource("11_yir0d")
}, {
"duration": 1.0,
"texture": ExtResource("12_eou8u")
}, {
"duration": 1.0,
"texture": ExtResource("13_8dl21")
}, {
"duration": 1.0,
"texture": ExtResource("14_tppg2")
}, {
"duration": 1.0,
"texture": ExtResource("15_ycl31")
}, {
"duration": 1.0,
"texture": ExtResource("16_0igio")
}, {
"duration": 1.0,
"texture": ExtResource("17_y0umi")
}, {
"duration": 1.0,
"texture": ExtResource("18_ddwdk")
}, {
"duration": 1.0,
"texture": ExtResource("19_nrech")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_4m3c3"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_bk7j1"]
font = ExtResource("4_rly5q")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_8vom7"]
font = ExtResource("4_rly5q")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_ogsi4"]

[sub_resource type="LabelSettings" id="LabelSettings_h2g85"]
font = ExtResource("4_rly5q")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_utj3q"]
font = ExtResource("4_rly5q")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_olhyw"]
font = ExtResource("4_rly5q")
font_size = 24

[node name="main_game_scene_zach" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nibp3")

[node name="MusicPlayer" parent="." instance=ExtResource("2_csqjr")]

[node name="laughter_module" parent="." instance=ExtResource("2_i56to")]
unique_name_in_owner = true

[node name="panel_frame" type="NinePatchRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00104167
anchor_top = 0.0037037
anchor_right = 1.0
anchor_bottom = 0.993519
texture = ExtResource("2_ceahc")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="panel_modifiers" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00966255
anchor_top = 0.0200454
anchor_right = 0.506169
anchor_bottom = 0.501136
offset_right = 6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="panel_frame/panel_modifiers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0284431
anchor_top = 0.0527777
anchor_right = 0.979042
anchor_bottom = 0.938888
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="label_modifiers" type="Label" parent="panel_frame/panel_modifiers/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yees3")
text = "Available Components"
label_settings = SubResource("LabelSettings_n36ei")

[node name="item_list" type="ItemList" parent="panel_frame/panel_modifiers/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gc2j1")
theme_override_font_sizes/font_size = 18
max_columns = 2
same_column_width = true
script = ExtResource("4_434bg")

[node name="panel_object" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00966255
anchor_top = 0.513163
anchor_right = 0.506169
anchor_bottom = 0.787117
offset_right = 6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="panel_frame/panel_object"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 17.0
offset_right = -19.9999
offset_bottom = -17.9999
grow_horizontal = 2
grow_vertical = 2

[node name="label_object" type="Label" parent="panel_frame/panel_object/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_yees3")
text = "Active Components (0/3)"
label_settings = SubResource("LabelSettings_n36ei")

[node name="active_item_list" type="ItemList" parent="panel_frame/panel_object/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
max_columns = 4
same_column_width = true

[node name="panel_object_description" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00988554
anchor_top = 0.797942
anchor_right = 0.506764
anchor_bottom = 0.981291
offset_right = -6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="label_object_description" type="Label" parent="panel_frame/panel_object_description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0305654
anchor_top = 0.0747041
anchor_right = 0.46512
anchor_bottom = 0.426745
offset_left = -2.33298
offset_top = 1.85034
offset_right = 26.1672
offset_bottom = 1.85034
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yees3")
text = "Description"
label_settings = SubResource("LabelSettings_n36ei")

[node name="text_description" type="RichTextLabel" parent="panel_frame/panel_object_description"]
layout_mode = 0
anchor_left = 0.0335079
anchor_top = 0.326531
anchor_right = 0.973822
anchor_bottom = 0.897959
theme = SubResource("Theme_ufk8t")
theme_override_font_sizes/normal_font_size = 22
text = "Evil monkey. They steal bananas fast, and have a high voice."

[node name="panel_target" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.510926
anchor_top = 0.02058
anchor_right = 0.989074
anchor_bottom = 0.282507
texture = ExtResource("2_ceahc")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="Node" type="Node" parent="panel_frame/panel_target"]

[node name="VBoxContainer" type="VBoxContainer" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.086
anchor_right = 0.974
anchor_bottom = 0.912
offset_left = -1.72581
offset_top = -0.856007
offset_right = 0.425415
offset_bottom = 0.24794
grow_horizontal = 2
grow_vertical = 2

[node name="label_target" type="Label" parent="panel_frame/panel_target/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yees3")
text = "Customer request:"
label_settings = SubResource("LabelSettings_n36ei")

[node name="TargetLabels" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label_pitch" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "Pitch"
label_settings = SubResource("LabelSettings_1vrp3")
horizontal_alignment = 1

[node name="label_speed" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "Speed"
label_settings = SubResource("LabelSettings_1vrp3")
horizontal_alignment = 1

[node name="label_volume" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "Vol."
label_settings = SubResource("LabelSettings_1vrp3")
horizontal_alignment = 1

[node name="TargetValues" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label_pitch_value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetValues"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "3"
label_settings = SubResource("LabelSettings_xvs7j")
horizontal_alignment = 1

[node name="label_speed_value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetValues"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "3
"
label_settings = SubResource("LabelSettings_xqlj8")
horizontal_alignment = 1

[node name="label_volume_value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetValues"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yees3")
text = "3
"
label_settings = SubResource("LabelSettings_xx25p")
horizontal_alignment = 1

[node name="label_Current" type="Label" parent="panel_frame/panel_target/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yees3")
text = "Current combo:"
label_settings = SubResource("LabelSettings_n36ei")

[node name="TargetLabels2" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Current_P_Value_Contaner" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Current_P_Value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/Current_P_Value_Contaner"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_cbivg")
horizontal_alignment = 1

[node name="Current_P_Addition" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/Current_P_Value_Contaner/Current_P_Value"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -12.0
offset_right = 52.0
offset_bottom = 15.0
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_ceaa0")
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Current_S_Value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_8c5qn")
horizontal_alignment = 1

[node name="Current_S_Addition" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/HBoxContainer/Current_S_Value"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -12.0
offset_right = 52.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_ceaa0")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Current_V_Value" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_vc8xy")
horizontal_alignment = 1

[node name="Current_V_Addition" type="Label" parent="panel_frame/panel_target/VBoxContainer/TargetLabels2/HBoxContainer2/Current_V_Value"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -12.0
offset_right = 52.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_6bjud")
text = "0"
label_settings = SubResource("LabelSettings_ceaa0")
horizontal_alignment = 2

[node name="panel_laugh_module" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511967
anchor_top = 0.28812
anchor_right = 0.989074
anchor_bottom = 0.981291
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
script = ExtResource("6_cubky")
metadata/_edit_use_anchors_ = true

[node name="label_laugh_module" type="Label" parent="panel_frame/panel_laugh_module"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0334689
anchor_top = 0.0210843
anchor_right = 0.486032
anchor_bottom = 0.125
offset_left = -1.88408
offset_top = 4.66327
offset_right = 142.616
offset_bottom = 4.66327
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yees3")
text = "Laughter Module"
label_settings = SubResource("LabelSettings_n36ei")

[node name="label_robot" type="Label" parent="panel_frame/panel_laugh_module"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503817
anchor_top = 0.0316265
anchor_right = 0.956379
anchor_bottom = 0.135542
offset_left = 23.1996
offset_top = 45.195
offset_right = -132.3
offset_bottom = 28.294
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yees3")
text = "Robot
"
label_settings = SubResource("LabelSettings_n36ei")
horizontal_alignment = 1

[node name="button_launch" type="Button" parent="panel_frame/panel_laugh_module"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0856832
anchor_top = 0.59572
anchor_right = 0.310017
anchor_bottom = 0.844419
theme_override_colors/font_color = Color(0.945098, 0.960784, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_pumu3")
theme_override_styles/hover = SubResource("StyleBoxFlat_uw3th")
disabled = true
text = "Ship it"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="panel_frame/panel_laugh_module"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0697928
anchor_top = 0.161145
anchor_right = 0.317339
anchor_bottom = 0.503012
texture = ExtResource("3_cna1x")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="panel_frame/panel_laugh_module/TextureRect"]
visible = false
position = Vector2(177, 256)
scale = Vector2(2.73438, 2.73438)

[node name="CollisionShape2D" type="CollisionShape2D" parent="panel_frame/panel_laugh_module/TextureRect/Area2D"]
position = Vector2(-22.8571, -51.5656)
shape = SubResource("RectangleShape2D_hw4ma")

[node name="texture_rect_robot" type="TextureRect" parent="panel_frame/panel_laugh_module"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.529054
anchor_top = 0.199729
anchor_right = 0.767876
anchor_bottom = 0.529549
texture = ExtResource("4_0clmj")
metadata/_edit_use_anchors_ = true

[node name="texture_rect_robot_explosion" type="AnimatedSprite2D" parent="panel_frame/panel_laugh_module/texture_rect_robot"]
unique_name_in_owner = true
visible = false
position = Vector2(26.9999, 49.0002)
scale = Vector2(11.2891, 11.2891)
sprite_frames = SubResource("SpriteFrames_b5n1g")
frame = 9
frame_progress = 1.0
metadata/_edit_use_anchors_ = true

[node name="texture_rect_robot_commentary" type="Label" parent="panel_frame/panel_laugh_module/texture_rect_robot"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = -0.300066
anchor_top = -0.0935248
anchor_right = 1.22636
anchor_bottom = 0.134442
theme = ExtResource("20_hybi0")
label_settings = SubResource("LabelSettings_4m3c3")
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="texture_rect_robot_button" type="TextureButton" parent="panel_frame/panel_laugh_module"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.529054
anchor_top = 0.199729
anchor_right = 0.767876
anchor_bottom = 0.529549
metadata/_edit_use_anchors_ = true

[node name="text_robot" type="RichTextLabel" parent="panel_frame/panel_laugh_module"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400218
anchor_top = 0.563253
anchor_right = 0.966194
anchor_bottom = 0.954819
offset_top = 3.05176e-05
theme = SubResource("Theme_ufk8t")
theme_override_font_sizes/normal_font_size = 22
text = "I want to be an evil robot that is fast with a deep voice "

[node name="separator" type="TextureRect" parent="panel_frame/panel_laugh_module"]
layout_mode = 0
anchor_left = 0.363141
anchor_top = 0.149096
anchor_right = 0.374046
anchor_bottom = 0.879518
texture = ExtResource("5_btbry")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CurrentModule" type="GridContainer" parent="panel_frame/panel_laugh_module"]
visible = false
layout_mode = 0
offset_left = 11.5996
offset_top = -108.4
offset_right = 208.6
offset_bottom = -6.4003
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 0
columns = 2
script = ExtResource("7_3xkvv")

[node name="ResultScreen" type="NinePatchRect" parent="panel_frame"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164932
anchor_top = 0.109682
anchor_right = 0.854318
anchor_bottom = 0.888447
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="Laugh_Again" type="Button" parent="panel_frame/ResultScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19445
anchor_top = 0.328049
anchor_right = 0.949
anchor_bottom = 0.492
offset_left = 512.883
offset_top = 23.5191
offset_right = 0.0592651
offset_bottom = 0.327942
theme = ExtResource("20_hybi0")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_pumu3")
theme_override_styles/hover = SubResource("StyleBoxFlat_uw3th")
text = "Laugh Again"
metadata/_edit_use_anchors_ = true

[node name="Next_Robot" type="Button" parent="panel_frame/ResultScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.065
anchor_top = 0.356
anchor_right = 0.336
anchor_bottom = 0.485
offset_left = 0.0995026
offset_top = -0.0959473
offset_right = -0.161255
offset_bottom = -0.0100403
theme = ExtResource("20_hybi0")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_pumu3")
theme_override_styles/hover = SubResource("StyleBoxFlat_uw3th")
text = "Next Robot!"
metadata/_edit_use_anchors_ = true

[node name="Result_Title" type="Label" parent="panel_frame/ResultScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.401
anchor_top = 0.065
anchor_right = 0.623
anchor_bottom = 0.152
offset_left = -214.06
offset_top = -0.290005
offset_right = 211.62
offset_bottom = 15.768
text = "Result"
label_settings = SubResource("LabelSettings_bk7j1")
horizontal_alignment = 1

[node name="Robot_Name" type="Label" parent="panel_frame/ResultScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416
anchor_top = 0.191
anchor_right = 0.605
anchor_bottom = 0.234
offset_left = 0.039978
offset_top = -0.206009
offset_right = -0.300049
offset_bottom = 0.155991
text = "Robot Name
"
label_settings = SubResource("LabelSettings_8vom7")
horizontal_alignment = 1

[node name="Text_Fail" type="Label" parent="panel_frame/ResultScreen"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 444.0
offset_right = 1009.0
offset_bottom = 631.0
theme_type_variation = &"HeaderLarge"
text = "Failure text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Text_Average" type="Label" parent="panel_frame/ResultScreen"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 444.0
offset_right = 1009.0
offset_bottom = 631.0
theme_type_variation = &"HeaderLarge"
text = "Average result text
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Text_Success" type="Label" parent="panel_frame/ResultScreen"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 444.0
offset_right = 1009.0
offset_bottom = 631.0
theme_type_variation = &"HeaderLarge"
text = "Success result text"
label_settings = SubResource("LabelSettings_ogsi4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Robot_Icon" type="TextureRect" parent="panel_frame/ResultScreen"]
layout_mode = 0
offset_left = 432.0
offset_top = 175.0
offset_right = 659.0
offset_bottom = 420.0
texture = ExtResource("11_lrb24")

[node name="ModulePicture" type="TextureRect" parent="panel_frame/ResultScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465094
anchor_top = 0.554054
anchor_right = 0.557547
anchor_bottom = 0.681682
texture = ExtResource("3_cna1x")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="panel_frame/ResultScreen/ModulePicture"]
custom_minimum_size = Vector2(9.125, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 2.02
anchor_bottom = 1.353
offset_left = -48.0
offset_top = 79.0
offset_right = -36.96
offset_bottom = 3.99499
theme_override_constants/separation = 19
alignment = 1

[node name="ResultScreen_Pitch" type="Label" parent="panel_frame/ResultScreen/ModulePicture/HBoxContainer"]
layout_mode = 2
text = "p.0"
label_settings = SubResource("LabelSettings_h2g85")

[node name="ResultScreen_Speed" type="Label" parent="panel_frame/ResultScreen/ModulePicture/HBoxContainer"]
layout_mode = 2
text = "S.0"
label_settings = SubResource("LabelSettings_utj3q")

[node name="ResultScreen_Volume" type="Label" parent="panel_frame/ResultScreen/ModulePicture/HBoxContainer"]
layout_mode = 2
text = "V.0"
label_settings = SubResource("LabelSettings_olhyw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_l2pxu")
volume_db = -12.0

[connection signal="gui_input" from="panel_frame/panel_modifiers/VBoxContainer/item_list" to="panel_frame/panel_modifiers/VBoxContainer/item_list" method="_on_ItemList_gui_input"]
[connection signal="item_clicked" from="panel_frame/panel_modifiers/VBoxContainer/item_list" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="panel_frame/panel_modifiers/VBoxContainer/item_list" to="." method="_on_item_list_item_selected"]
[connection signal="gui_input" from="panel_frame/panel_object/VBoxContainer/active_item_list" to="panel_frame/panel_modifiers/VBoxContainer/item_list" method="_on_ItemList_gui_input"]
[connection signal="pressed" from="panel_frame/panel_laugh_module/button_launch" to="." method="_on_button_launch_pressed"]
[connection signal="pressed" from="panel_frame/panel_laugh_module/texture_rect_robot_button" to="." method="_on_texture_rect_robot_button_pressed"]
[connection signal="pressed" from="panel_frame/ResultScreen/Laugh_Again" to="." method="_on_laugh_again_pressed"]
[connection signal="pressed" from="panel_frame/ResultScreen/Next_Robot" to="." method="_on_next_robot_pressed"]
